tests/tooling/fixtures/native/recovery/positive/protocol_annotation_alias_signature.objc3
module ProtocolAnnotationAliasSignature;

fn choose(flag: bool, when_true: Protocol, when_false: Protocol) -> Protocol {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 41, 9) + 1;
}
