tests/tooling/fixtures/native/recovery/negative/negative_conditional_parser_missing_then_statement.objc3
// Expected diagnostic code(s): O3P103.
module NegativeConditionalParserMissingThenStatement;

fn main() -> i32 {
  if (1)
  else
    return 1;
  return 0;
}
